--- a/.github/workflows/dev.workflow.yml
+++ b/.github/workflows/dev.workflow.yml
@@ -1,21 +1,4 @@
-name: github pages
-
-on:  pull_request
-
-jobs:
-  deploy:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup mdBook
-        uses: peaceiris/actions-mdbook@v1
-        with:
-          mdbook-version: 'latest'
-
-      - run: cargo install mdbook-open-on-gh
-      - run: mdbook build
-
+name: Dev Workflow - Test and check thing
 on:  push
 
 jobs:
@@ -37,4 +20,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./book
-
